@@ -1,4 +1,6 @@
 0.48 2022-11-30
+        - Remove deprecated 'auth_support' (since 0.31)
+          configuration parameter - use 'Auth' plugin instead. (diewald)
 
 0.47 2022-11-22
         - Add command to generate super_client_info file. (diewald)
